--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,6 +1,8 @@
+browser.id=Chrome
 copy.src.files=false
 copy.src.on.open=false
 copy.src.target=
+debug.url=DEFAULT_URL
 index.file=index.php
 run.as=LOCAL
-url=http://localhost/BJ_M152/
+url=http://127.0.0.1/BJ_M152/
